--- a/project_3/exercise3_Note.tex
+++ b/project_3/exercise3_Note.tex
@@ -95,7 +95,7 @@ With the information that for $N$ leafs, a binary tree has $2N-1$ nodes, the Huf
 \textit{Struct} \textit{node} contains all information needed to establish the relationship between the nodes of the array. E.g. frequency, pointer to the children (left, right), parent and own id w.r.t. the index of the node's array and so on. Once the algorithm is done (i.e. only one node remains in the queue) all entries of the array has been processed. Then, the sequence of bit codes of each character can be obtained inverting the path computed from the leafs to the root. (For more details see code).
 
 The container list was selected, because it allows to sort the elements according to some argument, in this case the according to the frequency value saved in each node. Accessing to the front of the list, the nodes with the 2 smallest frequencies could be obtain easily. \\
-After the insertion of the new node, the queue was sorted again.
+After the insertion of the new node, the queue is sorted again.
 
 % #######################################################################################
 \subsection{Mode x}
